--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ html, body{
 	overflow-x: auto;
 }
 main {
-	background: linear-gradient(to bottom, #DDDDDD 0%, #7B7B7B 100%);
+	background: linear-gradient(to bottom, #90B0AA 0%, #20B2AA 100%);
 	background-repeat: no-repeat;
 	min-height: 100%;
 	margin: 0px;
@@ -141,7 +141,7 @@ main {
 	height: 100%;
 	/*margin: 30px;*/
 	overflow: hidden;
-	background-color: #ACACAC;
+	background-color: #CCFAEA;
 	border-radius: 15px;
 }
 .navigationlink {
@@ -183,13 +183,13 @@ header{
 	top: 0px;
 	float: right;
 	/*Color*/
-	background-color: #808080;
+	background-color: #FA8072;
 	/*Text*/
 	text-align: center;
 	font-family: 'Trebuchet MS', sans-serif;
 	font-weight: bold;
 	font-size: 20px;
-	color: white;
+	color: #302010;
 	z-index: 1;
 }
 header p{
@@ -247,12 +247,13 @@ header p{
 	height: 120px;
 	margin: 30px;
 	overflow: hidden;
-	background-color: lightgray;
+	background-color: #FFA092;
 	border-radius: 15px;
 }
 .border5px {
 	border: 5px solid black;
 	border-radius: 10px;
+	background-color: #AAEEDD;
 }
 
 /*ABOUT ME CSS NEEDS*/
@@ -478,7 +479,7 @@ div.homePhotoCont {
 	animation-fill-mode: forwards;
 }
 .navActive {
-	background-color: #BFBFBF;
+	background-color: #90BFAF;
 }
 @keyframes DashFromLeftThreeK {
 	0% {left: -3000px;}
