--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@
 		font-size: 13px;
 	}
 	.pProjectsName {
-		font-size: 35px;
+		font-size: 21px;
 	}
 	.projectsGeneralInfo p {
 		font-size: 15px;
@@ -77,7 +77,7 @@
 		font-size: 50px;
 	}
 	.pProjectsName {
-		font-size: 50px;
+		font-size: 30px;
 	}
 	.projectsGeneralInfo p {
 		font-size: 18px;
@@ -295,7 +295,7 @@ header p{
 }
 .projectsAnimatedTextSection {
 	width: 100%;
-	height: 80px;
+	/*height: 80px;*/
 	margin: 0px auto 0px auto;
 	position: relative;
 }
@@ -307,6 +307,7 @@ header p{
 .pProjectsName {
 	/*text-align: left;*/
 	/*font-size: 50px;*/
+	margin: 0px;
 	font-weight: bold;
 	font-family: 'Trebuchet MS', sans-serif;
 }
